# fjall-js

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vitest.config.ts
.github/workflows/: CI.yml  release.yml  version-bump.yml
__test__/: basic.test.ts  batch-options.test.ts  esm-loader.test.ts  leak-loop.test.ts  readonly.test.ts  readonly.type-check.ts  worker-batch.mjs  worker-cmd.mjs  worker-entry.mjs  worker-threads-regression.test.ts  workers.test.ts
examples/worker-threads/: db-worker.mjs  main.mjs
fjall-squat/: README.md  index.js  package.json
npm/darwin-arm64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
scripts/: patch-esm-loader.mjs  pin-optional-deps.mjs
src/: engine.rs  lib.rs
