[package]
name = "fjall-js"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Node.js bindings for the fjall LSM-tree storage engine"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# NOTE: intentionally NO "async"/"tokio_rt" features. Those route every
# `#[napi] async fn` through a process-global tokio runtime + a cross-thread
# ThreadSafeFunction deferred, which crashes under concurrent Node worker_threads
# Envs. We use napi `Task`/`AsyncTask` (libuv per-Env async work) instead.
# See src/lib.rs and .context/ROOT_CAUSE.md.
napi = { version = "2", default-features = false, features = ["napi9"] }
napi-derive = "2"
fjall = "2"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
